test/haskell2010/conformance/negative/ffi-wrapper-bad-shape.hs
module Main where

import Foreign (FunPtr)

foreign import ccall "wrapper" badWrap :: (Int -> IO Int) -> IO (FunPtr (Bool -> IO Int))

main :: IO ()
main = return ()
